--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+:root {
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light dark; 
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -16,7 +17,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -68,4 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}  */
