--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -624,3 +624,18 @@ body, #root {
   background-position: center bottom;
   perspective: 2000px; /* agrega sensación de profundidad */
 }
+
+
+/* Solo afecta el texto informativo */
+.paginator-info {
+  color: #fff;
+  text-shadow: 
+    0 0 5px rgba(0, 0, 0, 0.9), 
+    0 0 10px rgba(0, 0, 0, 0.7);
+}
+
+/* Mantener los botones normales sin ese estilo */
+.paginator button {
+  color: inherit;   /* hereda el color normal */
+  text-shadow: none; /* sin sombra de texto */
+}
