--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,7 @@ html, body {
   margin: 0;
   padding: 0; 
   background-color: #f9fafb; /* mismo que bg-gray-50 */
-
+  scroll-behavior: smooth;
 }
 
 
