--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -635,5 +635,14 @@ body, #root {
   color: inherit;   /* hereda el color normal */
   text-shadow: none; /* sin sombra de texto */
 }
-
-
+/* Scroll personalizado */
+.custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: rgba(16, 185, 129, 0.4); /* verde esmeralda translúcido */
+  border-radius: 4px;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(16, 185, 129, 0.6);
+}
